# Minivim

./: .gitignore  CMakeLists.txt  README.md  cmake_install.cmake  command_mode.cpp  insert_mode.cpp  minivim.cbp  normal_mode.cpp  start.cpp
minivim/: command_mode.cpp  insert_mode.cpp  minivim.h  normal_mode.cpp  start.cpp
